# 2024GR39CS462_Scalable-Microservices-Based-Machine-Learning-Deployment-with-Kubeflow-and-Kubernetes

./: Dockerfile  README.md  client_demo.py  docker-compose.yml  main.py  model.pkl  pyproject.toml
data_ingestion/: Dockerfile  main.py  requirements.txt
data_ingestion/k8s/: deployment.yaml  service.yaml
inference/: Dockerfile  main.py  model_generator.py  requirements.txt
inference/k8s/: deployment.yaml  service.yaml
postprocessing/: Dockerfile  main.py  requirements.txt
postprocessing/k8s/: deployment.yaml  service.yaml
preprocessing/: Dockerfile  main.py  requirements.txt
preprocessing/k8s/: deployment.yaml  service.yaml
static/css/: styles.css
static/js/: main.js
templates/: index.html
